@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Improve handling of padding in status formats. (caf)
+
 * Use system setenv() in preference to compat bsd_setenv(). (caf)
 
 * Allow selection of alternate hashing methods with $crypt(). (caf)
